# rtty

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  BUILDOPENWRT.md  BUILDOPENWRT_ZH.md  CMakeLists.txt  COMMAND.md  COMMAND_ZH.md  CONTRIBUTING.md  CONTRIBUTING_ZH.md  CROSS_COMPILE.md  LICENSE  OPENWRT.md  OPENWRT_ZH.md  README.md  README_ZH.md  common.h  contributing.md  contributors.md  eslint.config.js  groups  index.html  mqtt_protocol.txt  msg.h  package-lock.json  package.json  page.html  project.config  rtty.ini  rtty.proto  util.c  util.h  vite.config.js  xterminal_broker.c  xterminal_broker.lua  xterminal_client.c  xterminal_dev.c  xterminal_device.c  xterminal_device.lua  (+2 more)
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.github/workflows/: build.yml  release.yml
assets/: DocsView-BVKHmanF.js  DocsView-Bk0_nCIw.css  DocsView-DZ0InWRv.js  FeaturesView-CBORGsSA.css  FeaturesView-CcNxwqt1.js  FeaturesView-ahk6jXit.js  HomeView-CQuaocvI.js  HomeView-DExrQD2s.css  HomeView-DHkyBnpg.js  index-C4cA64DP.js  index-Cnm1UCNG.js  index-whuStCji.css
cmake/Modules/: FindLibev.cmake  FindLibprotobuf-c.cmake  FindLibubox.cmake  FindLibuwsc.cmake  FindMbedTLS.cmake  FindWolfSSL.cmake
doc/: diagram.drawio
libuwsc/: Makefile
luci/controller/: rtty.lua
luci/model/cbi/: rtty.lua
openwrt/: Makefile
openwrt/files/: xterminal.config  xterminal.init
protobuf-c/: Makefile
rtty/: Makefile
rtty/files/: rtty.init
server/: install.sh  rtty.init  rtty.py  xttyd.init  xttyd.py
server/www/: rtty.html  xttyd.html
server/www/css/: app.css
src/: App.vue  CMakeLists.txt  avl.h  command.c  command.h  config.h.in  crc32.c  crc32.h  crypt.c  crypt.h  downfile.c  downfile.h  file.c  file.h  filectl.c  http.c  http.h  json.c  json.h  kcp.c  kcp.h  list.h  log.c  log.h  main.c  main.js  message.c  message.h  net.c  net.h  protocol.c  protocol.h  rtty.c  rtty.h  rtty.pb-c.c  rtty.pb-c.h  ssl.c  ssl.h  upfile.c  upfile.h  (+4 more)
src/components/: Layout.vue  Sponsor.vue  particles.js
src/locales/: en.json  zh-CN.json
src/md/: docs-zh.md  docs.md
src/particles.js/: index.js
src/router/: index.js
src/stores/: rtty-version.js
src/views/: DocsView.vue  FeaturesView.vue  HomeView.vue
tools/: install.sh  sendcmd.sh  test.sh  us-openssl_v1_0_1.patch  us-openssl_v1_1.patch
ubuntu/: Makefile  xterminal.conf  xterminal.init
www/: login.html  page.html  xterminal.html
www/css/: app.css  login.css
